k8s/todo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: todo
  labels:
    app: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: akhormi/todo-web:git-828724d
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  namespace: todo
spec:
  selector:
    app: todo-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: todo-ingress
  namespace: todo
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`todo.khormi.com`)
      kind: Rule
      services:
        - name: todo-app
          port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-dbhandler
  namespace: todo
  labels:
    app: todo-dbhandler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-dbhandler
  template:
    metadata:
      labels:
        app: todo-dbhandler
    spec:
      containers:
        - name: todo-dbhandler
          image: akhormi/todo-dbhandler:git-828724d
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
